Bug 155932 - SVG: g with clipPath doesn't work
Summary: SVG: g with clipPath doesn't work
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords: bibisected, bisected, filter:svg, regression
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-06-19 19:23 UTC by Xisco Faulí
Modified: 2024-07-10 09:46 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (592 bytes, image/svg+xml)
2023-06-19 19:23 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-06-19 19:23:37 UTC
Created attachment 188003 [details]
sample file

This is a regression from d47b37eea9779e3c354e6c19a7211a306965b7ef "tdf#97717: do not call add_postProcess from g element" which arose another existing issue
Comment 1 Commit Notification 2023-06-20 16:30:44 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3e0e67a152e9631574e28dacb6e06a96f03ebca2

tdf#155932: tdf#97717: only apply opacity when primitive

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-06-20 17:27:59 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/750ed0eee376c687cf26a8df689792eb5352e0aa

tdf#155932: tdf#97717: only apply opacity when primitive

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 stragu 2023-06-22 06:53:10 UTC
Confirmed the unclipped circle at d47b37eea9779e3c354e6c19a7211a306965b7ef (cb83655a63947fde75f9238a3920eee7d8535b14 in 24.2 bibisect linux repo).

Looks good now in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 66da786bdd4588b31755058acf46034c2056215c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks!