tdf#155932: tdf#97717: only apply opacity when primitive

Partially revert d47b37eea9779e3c354e6c19a7211a306965b7ef
"tdf#97717: do not call add_postProcess from g element"
since we still need to call add_postProcess from g to
apply the clip-path

Change-Id: Ibdc5afadc0db239d0b0e14810943009a4c0a16a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153353
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit f222b28f69740de1b3c8fb639fef32eb55ff420c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153339