svgio/inc/svgstyleattributes.hxx
@@ -293,7 +293,8 @@ namespace svgio::svgreader
             void add_postProcess(
                 drawinglayer::primitive2d::Primitive2DContainer& rTarget,
                 drawinglayer::primitive2d::Primitive2DContainer&& rSource,
-                const std::optional<basegfx::B2DHomMatrix>& pTransform) const;
+                const std::optional<basegfx::B2DHomMatrix>& pTransform,
+                bool bIsPrimitive) const;
 
             /// helper to set mpCssStyleParent temporarily for CSS style hierarchies
             void setCssStyleParent(const SvgStyleAttributes* pNew) { mpCssStyleParent = pNew; }
