svgio/source/svgreader/svgellipsenode.cxx
@@ -150,7 +150,7 @@ namespace svgio::svgreader
 
             if(!aNewTarget.empty())
             {
-                pStyle->add_postProcess(rTarget, std::move(aNewTarget), getTransform());
+                pStyle->add_postProcess(rTarget, std::move(aNewTarget), getTransform(), true);
             }
         }
 } // end of namespace svgio::svgreader
