svgio/source/svgreader/svglinenode.cxx
@@ -145,7 +145,7 @@ namespace svgio::svgreader
 
             if(!aNewTarget.empty())
             {
-                pStyle->add_postProcess(rTarget, std::move(aNewTarget), getTransform());
+                pStyle->add_postProcess(rTarget, std::move(aNewTarget), getTransform(), true);
             }
         }
 } // end of namespace svgio::svgreader
