svgio/source/svgreader/svgpolynode.cxx
@@ -106,7 +106,7 @@ namespace svgio::svgreader
 
                 if(!aNewTarget.empty())
                 {
-                    pStyle->add_postProcess(rTarget, std::move(aNewTarget), getTransform());
+                    pStyle->add_postProcess(rTarget, std::move(aNewTarget), getTransform(), true);
                 }
             }
         }
