svgio/source/svgreader/svgtextnode.cxx
@@ -251,7 +251,7 @@ namespace svgio::svgreader
 
             if(!aNewTarget.empty())
             {
-                pStyle->add_postProcess(rTarget, std::move(aNewTarget), getTransform());
+                pStyle->add_postProcess(rTarget, std::move(aNewTarget), getTransform(), true);
             }
         }
 
